--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="card-item">
               <span>02</span>
-              <h4><a href="" class="stretched-link">Sudhir Yadav</a></h4>
-              <p>Sudhir faces challenges with courage, seeking truth and balance, never yielding to pain or difficult circumstances.</p>
+              <h4><a href="" class="stretched-link">Sunil Mandal</a></h4>
+              <p>Sunil faces challenges with courage, seeking truth and balance, never yielding to pain or difficult circumstances.</p>
             </div>
           </div><!-- Card Item -->
 
