--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="card-item">
               <span>03</span>
               <h4><a href="" class="stretched-link">Shreekant sha</a></h4>
-              <p>Shreekant sha faces all challenges boldly, never avoiding responsibilities, and embraces every hardship as a path to growth and success.</p>
+              <p>Shreekant Sha faces all challenges boldly, never avoiding responsibilities, and embraces every hardship as a path to growth and success.</p>
             </div>
           </div><!-- Card Item -->
 
