--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card-item">
               <span>03</span>
-              <h4><a href="" class="stretched-link">Shreekant sha</a></h4>
+              <h4><a href="" class="stretched-link">Shreekant Sha</a></h4>
               <p>Shreekant Sha faces all challenges boldly, never avoiding responsibilities, and embraces every hardship as a path to growth and success.</p>
             </div>
           </div><!-- Card Item -->
