--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="card-item">
               <span>01</span>
-              <h4><a href="" class="stretched-link">Abhi Isar</a></h4>
-              <p>Abhi Isar always works diligently, balancing effort and patience to achieve success while maintaining integrity and inspiring others.</p>
+              <h4><a href="" class="stretched-link">Sudhir Yadav</a></h4>
+              <p>Sudhir Yadav always works diligently, balancing effort and patience to achieve success while maintaining integrity and inspiring others.</p>
             </div>
           </div><!-- Card Item -->
 
@@ -596,7 +596,7 @@ We address every concern thoroughly, ensuring no detail is overlooked. Our dedic
     <h2>Let's get in touch</h2>
     <p>Abhi often faces challenges but continues to move forward and share his ideas with confidence!</p>
 
-    <div class="info-item"><i class="fas fa-map-marker-alt"></i>Biratnagar, Province 1, Nepal</div>
+    <div class="info-item"><i class="fas fa-map-marker-alt"></i>Rajbiraj, Province 2, Nepal</div>
     <div class="info-item"><i class="fas fa-envelope"></i>09isar2006@gmail.com</div>
     <div class="info-item"><i class="fas fa-phone"></i>98-2234-9129</div>
 
